<resources>
    <string name="app_name">KP Traffic App</string>

    <!-- TODO: Remove or change this placeholder text -->

    <!-- Strings related to login -->

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="child_text">offence Child List</string>
    <string name="parent_text">Offence Parent List</string>
    <string name="licence_issuance_requirement_one">• Pass Test page duly signed by the MLA (In case of failing the test the applicant must repeat the phase 2 i.e. again printing the test page by depositing again the said amount in the bank).</string>
    <string name="licence_issuance_requirement_two">• CNIC of the Concerned District (In case of the out district, permission may be granted from the concerned MLA/DPO in advance).</string>
    <string name="licence_issuance_requirement_three">• Medical Form duly signed from the Medical Officer.</string>
    <string name="licence_issuance_requirement_four">• Fee Slip deposit in the designated Bank i.e. Rs 125 or 250.</string>
    <string name="licence_issuance_requirement_eligible">After fulfilling the above requirements the applicant is eligible for getting the Computerized Driving License.</string>
    <string name="licence_issuance_requirement_five">• Fee Slip Deposited in the Bank for license Issuance i.e. Rs.600 or Rs.1200.</string>

    <string name="issuance_step_one">
Step 1 :
Token issuance:- For getting a computerized Driving License Token will be issued to the applicant in which the applicant CNIC No, Name, Type of License, Deposited amount, date of fee deposited and bank name are stored in the Database.</string>
    <string name="issuance_step_two">
    Step 2:
        Thumb and Signature Storing: – Applicant thumb and Signature are stored in the Database.</string>
    <string name="issuance_step_three">
    Step 3:
        Issuance of Fresh driving License: -After completing all the above steps the system will give a Computerized Driving License number to the applicant and a receipt is handed over to the applicant by telling him the receiving date of CDL and the history sheet is kept in record</string>
    <string name="intro_text">Point the camera view to a QR Code to read the information</string>
    <string name="restart_activity">Restart Activity</string>
    <string name="stop_start_qreader">Stop QREader</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="start">Start</string>
    <string name="visitor_tracking">• Visitor Tracking</string>
    <string name="capture_photo_of_visitor">• Capture Photo of visitor</string>
    <string name="visitor_verification">• Visitor Verification</string>
    <string name="bost_security">• Boost Security</string>
    <string name="issue_visitor_pass">• Issue Visitor Pass</string>

    <string name="vission_testing">• Vision Testing</string>
    <string name="hearing_test">• Hearing Test</string>
    <string name="applicant_age">• Application Apparent age?</string>
    <string name="blood_test">• Blood Test To Determine Blood Group</string>
    <string name="eye_color">• Eye Color</string>
    <string name="physical_fitness">• Physical Fitness</string>
    <string name="form_c">• Form C Duly Sign By Physician</string>

    <string name="applicant_name">• Applicant Name</string>
    <string name="father_name">• Father Name</string>
    <string name="date_of_birth">• Date Of Birth</string>
    <string name="present_address">• Present Address</string>
    <string name="capture_photo">• Capture Photo</string>
    <string name="issue_learner">• Issue Learner Permit For 45 Days</string>
    <string name="PARENT_TITLE_ONE_URDU">مقررہ حد رفتا ر سے تجاوز کرنا۔</string>
    <string name="PARENT_TITLE_TWO_URDU">گاڑی میں مقررہ حد سے زیا دہ سواریاں لانا</string>
    <string name="PARENT_TITLE_3_URDU">ہاتھ سے یا بر قی ٹریفک سگنل کی خلاف ورزی کرنا۔</string>
    <string name="PARENT_TITLE_4">ممنوعہ علاقہ میں اوور ٹیکنگ کرنا۔</string>
    <string name="PARENT_TITLE_6_URDU">دوسری گاڑیوں کو راستے کا حق نہ دینا۔</string>
    <string name="PARENT_TITLE_7_URDU">ایمرجنسی گاڑیوں کی روانی میں خلل ڈالنا۔</string>
    <string name="PARENT_TITLE_8_URDU">جسامت یا ناپ کی پابندیوں کے خلاف ذیادہ سامان لوڈ کرنا۔</string>
    <string name="PARENT_TITLE_9_URDU">رات کے وقت مناسب لا ئٹ کے بغیر گا ڑی چلانا۔</string>
    <string name="PARENT_TITLE_10_URDU">سڑک کی غلط طرف گاڑی چلانا۔</string>
    <string name="PARENT_TITLE_11_URDU">ٹریفک کے اشاروں پر عمل نہ کرنا۔</string>
    <string name="PARENT_TITLE_12_URDU">ریلوے لائن کو غلط طریقے سے کراس کرنا۔</string>
    <string name="PARENT_TITLE_13_URUD">دوسری گاڑی کے پیچھے بہت قریب چلانا یا گا ڑی بہت تیزی سے موڑنا۔</string>
    <string name="PARENT_TITLE_14_URDU">ایسے رنگ شدہ یا غلاف شدہ شیشوں والی گاڑی چلانا جس کی وجہ سے گاڑی کے اندر سے دیکھنے میں رکاوٹ ہو۔ </string>
    <string name="PARENT_TITLE_15_URDU">ٹریفک قطار کو توڑنا۔</string>
    <string name="PARENT_TITLE_16_URDU">رات کے وقت سامنےآنےوالی ٹریفک کے لیے لائٹ مدہم نہ کرنا۔</string>
    <string name="PARENT_TITLE_17_URDU">یکطرفہ ٹریفک پر مخالف سمت سے گاڑی چلانا۔</string>
    <string name="PARENT_TITLE_18_URDU">گاڑی کے انڈیکیٹر کو غلط استعمال کرنا۔</string>
    <string name="PARENT_TITLE_19_URDU">ممنوعہ علاقہ میں گاڑی چلانا۔</string>
    <string name="PARENT_TITLE_20_URDU">سامان  کی غلط لوڈنگ کرنا یا غلط طریقے سے لوڈ شدہ سامان لے جانا۔</string>
    <string name="PARENT_TITLE_21_URUD">بتی جلانے کے اوقات کی پابندی نہ کرنا۔</string>
    <string name="PARENT_TITLE_22_URDU">ٹریفک میں مزاہم ہونا۔</string>
    <string name="PARENT_TITLE_23_URDU">گاڑی آہستہ چلانے کی پابندی نہ کرنا۔</string>
    <string name="PARENT_TITLE_24_URDU">ہلمٹ کے بغیر موٹر سائیکل پر سواری کرنا۔</string>
    <string name="PARENT_TITLE_25_URDU">سکول بس کو راستہ نہ دینا۔</string>
    <string name="PARENT_TITLE_26_URDU">ممنوعہ یو ٹرن لینا۔</string>
    <string name="PARENT_TITLE_27_URDU">ڈرائیوگ سیکھنے والوں کا خیال نہ رکھنا۔</string>
    <string name="PARENT_TITLE_28_URDU">پیدل چلنے والوں کو راستے کا حق نہ دینا۔</string>
    <string name="PARENT_TITLE_29_URDU">بے تحاشا یا غفلت سے گاڑی چلانا۔</string>
    <string name="PARENT_TITLE_30_URDU">بغیر ڈرائیوگ لائسنس کے گاڑی چلانا۔</string>
    <string name="PARENT_TITLE_31_URDU">ایسی گاڑی چلانا جو رجسڑڈ نا ہو۔</string>
    <string name="PARENT_TITLE_32_URDU">انشورنس کئے بغیر گاڑی چلانا۔</string>
    <string name="PARENT_TITLE_33_URDU">ٹرانسپورٹ گاڑٰی بغیر سپیڈومیٹر یا خراب سپیڈومیٹر کیساتھ چلانا۔</string>
    <string name="PARENT_TITLE_34_URDU">گاڑی کا دروازہ خطرناک طریقہ سے کھولنا۔</string>
    <string name="PARENT_TITLE_35_URDU">غلط لین سے ٹرن لینا۔</string>
    <string name="PARENT_TITLE_36_URDU">ممنوعہ علاقہ میں ہارن بجانا۔</string>
    <string name="PARENT_TITLE_37_URDU">ممنوعہ علاقہ میں ہارن بجانا۔</string>
    <string name="PARENT_TITLE_38_URDU">غلط یو ٹرن لینا۔</string>
    <string name="PARENT_TITLE_39_URDU">لائسنس پیش کرنے سے انکارکرنا۔</string>
    <string name="PARENT_TITLE_40_URDU">جب ٹریفک پولیس کو ضرورت ہو اور نہ رکے۔</string>
    <string name="PARENT_TITLE_41_URDU">فٹنس سرٹیفکیٹ کے بغیر گاڑی چلانا۔</string>
    <string name="PARENT_TITLE_42_URDU">مقررہ وزن سے زیادہ وزن لادنا۔</string>
    <string name="PARENT_TITLE_43_URDU">غیر محفوظ حالت میں گاڑٰی چلانا۔</string>
    <string name="PARENT_TITLE_44_URDU">پریشر یا موسیقی والا ہارن استعما ل کرنا۔</string>
    <string name="PARENT_TITLE_45_URDU">قانون یا رولز کی خلاف ورزی میں گاڑی چلانا جس کیلئے کوئی سزا مقرر نہ ہو۔</string>
    <string name="PARENT_TITLE_46_URDU">دھواں چھوڑنے والی گاڑیاں۔</string>
    <string name="PARENT_TITLE_47_URDU">کمسن ہو کر گاڑی چلانا۔</string>
    <string name="PARENT_TITLE_48_URDU">گاڑی چلاتے ہوئے موبائل فون استعمال کرنا۔</string>
    <string name="PARENT_TITLE_49_URDU">ایک پہئے پر موٹرسا ئیکل چلانا۔</string>
    <string name="PARENT_TITLE_50_URDU">کسی بھی خلاف ورزی کو دوہرانا۔</string>
    <string name="PARENT_TITLE_51_URDU">درج بالا خلاف ورذیوں میں اعانت کرنا۔</string>
    <string name="PARENT_TITLE_52_URDU">بغیر روٹ پرمٹ کے گاڑی چلانا۔</string>
    <string name="PARENT_TITLE_53_URDU">سلسلہ نمبر 52 کی دوبارہ خلاف ورذی کرنا۔</string>
    <string name="PARENT_TITLE_54_URDU">سلسلہ نمبر 4 کی دوبارہ خلاف ورذی کرنا۔</string>
    <string name="PARENT_TITLE_4_URDE">ممنوعہ علاقہ میں اوور ٹیکنگ کرنا۔</string>


</resources>
