<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background"
    tools:context=".fragments.LicenceProcedure">

    <ImageView
        android:id="@+id/main_logo"
        android:layout_marginTop="15dp"
        android:layout_centerHorizontal="true"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/main_layered_logo" />

    <ScrollView

        android:fillViewport="true"
        android:layout_below="@id/main_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
        android:background="@drawable/white_boarder"

        android:layout_marginBottom="10dp"
        android:layout_marginTop="30dp"

        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_marginTop="20dp"
            android:textSize="22dp"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="Requirements"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></TextView>

        <TextView
        android:layout_marginTop="20dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:textStyle="bold"
        android:textColor="#ffffff"
        android:text="@string/licence_issuance_requirement_one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></TextView>
        <TextView
            android:layout_marginTop="20dp"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:textStyle="bold"
            android:textColor="#ffffff"
            android:text="@string/licence_issuance_requirement_two"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></TextView>
        <TextView
            android:layout_marginTop="20dp"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:textStyle="bold"
            android:textColor="#ffffff"
            android:text="@string/licence_issuance_requirement_three"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></TextView>
        <TextView
            android:layout_marginTop="20dp"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:textStyle="bold"
            android:textColor="#ffffff"
            android:text="@string/licence_issuance_requirement_four"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></TextView>
        <TextView
            android:layout_marginTop="20dp"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:textStyle="bold"
            android:textColor="#ffffff"
            android:text="@string/licence_issuance_requirement_five"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></TextView>
        <TextView
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"

            android:textStyle="bold"
            android:textColor="#ffffff"
            android:text="@string/licence_issuance_requirement_eligible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></TextView>

        <View
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/white" />




        <TextView
            android:textSize="22dp"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="Procedure"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></TextView>

        <TextView
            android:layout_marginTop="20dp"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:textStyle="bold"
            android:textColor="#ffffff"
            android:text="@string/issuance_step_one"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></TextView>
        <TextView
            android:layout_marginTop="20dp"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:textStyle="bold"
            android:textColor="#ffffff"
            android:text="@string/issuance_step_two"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></TextView>
        <TextView
            android:layout_marginBottom="60dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:textStyle="bold"
            android:textColor="#ffffff"
            android:text="@string/issuance_step_three"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></TextView>
    </LinearLayout>
    </ScrollView>

</RelativeLayout>